# docker-server-config

./: Dockerfile  README.md  __init__.py  amd64.yml  app.py  arm64.yml  buildspec.yml  pyproject.toml
src/batchbuildgraph/: __init__.py  app.py
