[project]
name = "batchbuildgraph"
version = "0.1.0"
description = "A containerized Flask web application with AWS CodeBuild batch build capabilities"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.3.0",
]

[project.scripts]
batchbuildgraph = "batchbuildgraph.app:main"

[tool.poetry]
packages = [{include = "batchbuildgraph", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
